@@ -79,9 +79,6 @@ bool GrPixelConfigToMTLFormat(GrPixelConfig config, MTLPixelFormat* format) {
             return true;
         case kGray_8_as_Lum_GrPixelConfig:
             return false;
-        case kRGBA_float_GrPixelConfig:
-            *format = MTLPixelFormatRGBA32Float;
-            return true;
         case kRGBA_half_GrPixelConfig:
             *format = MTLPixelFormatRGBA16Float;
             return true;
@@ -314,9 +311,6 @@ size_t GrMtlBytesPerFormat(MTLPixelFormat format) {
         case MTLPixelFormatRGBA16Unorm:
             return 8;
 
-        case MTLPixelFormatRGBA32Float:
-            return 16;
-
 #ifdef SK_BUILD_FOR_IOS
         case  MTLPixelFormatETC2_RGB8:
             return 0;
@@ -374,7 +368,6 @@ const char* GrMtlFormatToStr(GrMTLPixelFormat mtlFormat) {
 #ifdef SK_BUILD_FOR_IOS
         case MTLPixelFormatABGR4Unorm:      return "ABGR4Unorm";
 #endif
-        case MTLPixelFormatRGBA32Float:     return "RGBA32Float";
         case MTLPixelFormatRGBA8Unorm_sRGB: return "RGBA8Unorm_sRGB";
         case MTLPixelFormatR16Unorm:        return "R16Unorm";
         case MTLPixelFormatRG16Unorm:       return "RG16Unorm";
